# geo-intelligence

./: .gitignore  CLAUDE.md  README.md  opportunity_board.py  opportunity_render.py  pyproject.toml  test_opportunity_board.py
geo/: __init__.py  (+2 more)
shanghai-tourism-geo/: .gitignore  CLAUDE.md  README.md  pyproject.toml
shanghai-tourism-geo/config/: watchlist.yaml
shanghai-tourism-geo/content/drafts/: 01_shanghai_offbeat_treasure_guide.md  02_shanghai_family_kids_guide.md  04_shanghai_local_weekend_guide.md
shanghai-tourism-geo/docs/: PROJECT_BRIEF.md
shanghai-tourism-geo/evidence/captures/: doubao-A-20260614T183540Z-a8440b70a6.json  doubao-A-20260614T183630Z-048a2a6890.json  doubao-A-20260614T183637Z-8644cf5782.json  doubao-A-20260614T183642Z-6bb1fdd7d8.json  doubao-A-20260614T183649Z-9c8b505cab.json  doubao-A-20260614T183656Z-8a2cecadeb.json  doubao-A-20260614T183703Z-c031f4d1f7.json  doubao-A-20260614T183725Z-97e242e4ce.json  doubao-A-20260614T183733Z-843155cf01.json  doubao-A-20260614T183809Z-e84f126c2f.json  doubao-A-20260614T183850Z-45eec451fc.json  doubao-A-20260614T183858Z-df0066b101.json  doubao-A-20260614T183927Z-1851ab8dae.json  doubao-A-20260614T183933Z-8063d302cc.json  doubao-A-20260614T183938Z-8c9a2ac6d1.json  doubao-A-20260614T183943Z-b92a3834f9.json  doubao-A-20260614T184002Z-3707419fea.json  doubao-A-20260614T184007Z-4ccdddfcd8.json  doubao-A-20260614T184031Z-8859ed5d21.json  doubao-A-20260614T184054Z-64742c8ce3.json  doubao-A-20260614T184101Z-358ec26ecd.json  (+21 more)
shanghai-tourism-geo/geo/: config.py
shanghai-tourism-geo/tests/: test_dashboard.py
(+368 files in other folders)
