[project]
name = "geo-intelligence"
version = "0.2.0"
description = "Auditable, reproducible GEO (Generative Engine Optimization) intelligence — shared engine + per-category profiles"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geo*", "categories*"]
