[project]
name = "lily-geo"
version = "0.1.0"
description = "Auditable, reproducible GEO (Generative Engine Optimization) intelligence workflow"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
